--- a/css/master.css
+++ b/css/master.css
@@ -83,6 +83,7 @@ p {
 	width: 94%;
 	height: 75%;
 	background-color: rgba(20,20,20,0.5);
+	color: white;
 	/*float: top;*/
 	margin: 0 auto;
 	border: 1px solid rgba(10,10,10,0.8);
@@ -149,10 +150,12 @@ h3 {
 
 #game-counter {
 	display: inline-block;
+	margin-top: 5px;
 }
 
 #game-counter span  {
-	background-color: red;
+	background-color: rgba(140,220,200,0.4);
+	text-align: right;
 }
 /*#hit-me {
 	width: 3.7em;
