--- a/css/master.css
+++ b/css/master.css
@@ -210,6 +210,22 @@ h3 {
 	color: black;
 }
 
+/*#new-card {
+	width: 6em;
+    height: 7.5em;
+    margin-right: -1.5em;
+    margin-left: -0.5em;
+    padding: 0.2em;
+    background-color: white;
+    display: inline-block;
+    position: relative;
+    text-align: left;
+    font-family: 'cards';
+	font-style: normal;
+    border: 3.5px solid rgba(10,10,10,0.5);
+    border-radius: 0.5em;
+    color: black;
+}*/
 
 #dealer-current-card {
 /*	width: 150px;
