--- a/css/master.css
+++ b/css/master.css
@@ -49,7 +49,7 @@ h2 {
 	background-color: white;
 	color: black;
 	text-shadow: 0 2px 0 #d3d3d3;
-	height: 458px;
+	height: 452px;
 	width: 30%;
 /*	left: 20px;
 	top: 100px;*/
@@ -136,31 +136,33 @@ h3 {
 	margin-right: 2em;*/
 }
 
-#deal-cards {
-	width: 3.7em;
-	height: 3.7em;
-	background-color: white;
-	border: 2px solid rgba(10,10,10,0.5);
-	display: inline-block;
-}
-
 .action {
+	margin: 0 auto;
 	display: inline-block;
 	width: 3.8em;
 	height: 3.8em;
 	background-color: white;
 	border: 2px solid rgba(10,10,10,0.5);
-	margin-top: 5em;
+	margin-top: 4em;
 	position: relative;
+	line-height: 3.5em;
+}
+
+.action:hover {
+	background-color: rgba(40,40,40,0.8);
+	border: 2px solid rgba(210,210,210,0.7);
+	color: white;	
 }
 
 #game-counter {
 	display: inline-block;
-	margin-top: 5px;
+	margin-top: 6px;
 }
 
 #game-counter span  {
-	background-color: rgba(140,220,200,0.4);
+	background-color: rgba(40,40,40,0.8);
+	color: rgba(240,240,240,0.8);
+	text-shadow: none;
 	text-align: right;
 }
 
@@ -290,7 +292,16 @@ h3 {
     border-radius: 0.5em;
     color: white;
 }
-
+@media (max-width: 700px) {
+	.bet {
+	background-color: rgba(40,40,40,0.8);
+	color: white;
+	width: 3em;
+	height: 2em;
+	border-radius: 15px;
+	box-shadow: -3px 5px 10px #888888
+}
+}
 @media (max-width: 640px) {
 	* {
 		background-color: black;
