--- a/css/master.css
+++ b/css/master.css
@@ -5,6 +5,8 @@
 
 * {
 	font-family: 'Work Sans', sans-serif;
+	margin 0;
+	padding 0;
 }
 
 html {
@@ -34,7 +36,6 @@ header {
     z-index: -1
 }
 h1 {
-	/*margin: 0 auto;*/
 	text-align: center;
 	margin-top: 0.35em;
 }
@@ -50,16 +51,12 @@ h2 {
 	color: black;
 	text-shadow: 0 2px 0 #d3d3d3;
 	height: 452px;
-	width: 30%;
-/*	left: 20px;
-	top: 100px;*/
+	width: 33%;
 	text-align: left;
 	margin-left: 10px;
-	margin-top: 7%	;
-	/*padding: 1em;*/
-	/*overflow: hidden;*/
-	/*margin-left: 5px;*/
+	margin-top: 8%	;
 }
+
 p {
 	display: inline-block;
 }
@@ -81,7 +78,6 @@ p {
 	margin: auto;
 	border: 1px solid rgba(10,10,10,0.8);
 	position: relative;
-	/*overflow: hidden;*/
 }
 
 #alert-center {
@@ -115,25 +111,21 @@ h3 {
 }
 
 #dealer-hand {
-	width: 62%;
+	width: 67%;
 	float: right;
 	padding: 1em;
 	display: inline-block;
 	text-align: center;
 	box-sizing: border-box;
-/*	margin-top: 2em;
-	margin-right: 2em;*/
 }
 
 #player-hand {
-	width: 62%;
+	width: 67%;
 	float: right;
 	padding: 1em;
 	display: inline-block;
 	text-align: center;
 	box-sizing: border-box;
-/*	margin-top: 2em;
-	margin-right: 2em;*/
 }
 
 .action {
@@ -182,7 +174,7 @@ h3 {
 }
 
 .card {
-    width: 6em;
+    width: 20%;
     height: 7.5em;
     margin-right: -1.5em;
     margin-left: -0.5em;
@@ -196,6 +188,21 @@ h3 {
     border: 3.5px solid rgba(10,10,10,0.5);
     border-radius: 0.5em;
     color: black;
+    transition: width 2s, height 2s, background-color 2s, transform 2s;
+}
+
+.card:hover {
+	width: 6.2em;
+	height: 7.8em;
+	background-color: rgba(245,255,252,0.7);
+	transform: rotate(10deg);
+}
+
+.card:before {
+	width: 6.2em;
+	height: 7.8em;
+	background-color: rgba(245,255,252,0.7);
+	transform: rotate(10deg);
 }
 
 .bet {
@@ -205,6 +212,25 @@ h3 {
 	height: 2.5em;
 	border-radius: 20px;
 	box-shadow: -3px 5px 10px #888888
+	animation-name: colorshift;
+	animation-duration: 3s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+
+@keyframes colorshift {
+	0% {background-color: rgb(60,60,60);}
+	16% {background-color: rgb(70,70,65);}
+	32% {background-color: rgb(110,110,100);}
+	48% {background-color: rgb(150,150,138);}
+	/*40% {background-color: rgb(190,190,175);}*/
+	/*50% {background-color: rgb(210,210,180);}*/
+	/*60% {background-color: rgb(190,190,175);}*/
+	/*70% {background-color: rgb(150,150,138);}*/
+	64% {background-color: rgb(110,110,100);}
+	80% {background-color: rgb(70,70,65);}
+	100% {background-color: rgb(60,60,60);}
+
 }
 
 .bet:hover {
@@ -291,7 +317,28 @@ h3 {
     border: 3.5px solid rgba(255,255,255,0.9);
     border-radius: 0.5em;
     color: white;
+    display: 
 }
+
+#placeholder {
+	width: 30%;
+	height: 200px;
+	border: 2px solid rgba(20,20,20,0.8);
+	border-radius: 15px;
+	float: center;
+	background-color: rgba(115, 125, 120, 0.7);
+	color: white;
+	font-weight: 500;
+	margin: 0 auto;
+	margin-top: -250px;
+	font-size: 46px;
+	text-align: center;
+	line-height: 60px;
+	display: none;
+}
+
+
+
 @media (max-width: 700px) {
 	.bet {
 	background-color: rgba(40,40,40,0.8);
@@ -302,10 +349,11 @@ h3 {
 	box-shadow: -3px 5px 10px #888888
 }
 }
+
+
 @media (max-width: 640px) {
 	* {
 		background-color: black;
-/*		display: none;	*/
 	}
 	body {
 		background-color: black;
@@ -317,7 +365,6 @@ h3 {
 	}
 	#frown {
  	max-width: 100%;
- 	/*padding: 10px;*/
  	}
 
  	#frownDiv {
