--- a/css/master.css
+++ b/css/master.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-	background-image: url('../img/wood-bg.jpg');
+	background-image: url('../img/wood-bg-dark.jpg');
 	background-size: 1400px 1000px;
 	color: white;
 	font-size: 16px;
@@ -46,7 +46,7 @@ h2 {
 
 }
 #message-center {
-	background-color: white;
+	background-color: rgba(230,230,230,0.7);
 	color: black;
 	text-shadow: 0 2px 0 #d3d3d3;
 	height: 452px;
@@ -124,7 +124,7 @@ h3 {
 
 .dynamic-numbers {
 	text-align: right;
-	display: inline-block;
+	display: inline-flex;
 
 }
 
