--- a/css/master.css
+++ b/css/master.css
@@ -49,7 +49,7 @@ h2 {
 	background-color: rgba(230,230,230,0.7);
 	color: black;
 	text-shadow: 0 2px 0 #d3d3d3;
-	height: 452px;
+	height: 407px;
 	width: 33%;
 	text-align: left;
 	margin-left: 10px;
@@ -195,7 +195,7 @@ h3 {
 }
 
 .card {
-    width: 20%;
+    width: 14%;
     height: 7.5em;
     margin-right: -1.5em;
     margin-left: -0.5em;
@@ -339,7 +339,11 @@ h3 {
 	display: none;
 }
 
-
+@media (max-width: 1100px) {
+	#message-center {
+		height: 425px
+	}
+}
 
 @media (max-width: 700px) {
 	.bet {
